testing copy to clipboard feature

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,13 @@ header {
   min-height: 100px;
 }
 
+.buttons-container {
+  display: flex;
+  justify-content: center;  
+  align-items: center;
+  
+}
+
 .card-footer {
   text-align: center;
 }
@@ -76,8 +83,7 @@ header {
   border: none;
   background-color: hsl(360, 91%, 36%);
   border-radius: 25px;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
-    0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px 0px;
   color: hsl(0, 0%, 100%);
   display: inline-block;
   font-size: 22px;
