amending buttons contrast ratio

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ h1 {
 
 .btn {
   border: none;
-  background-color: #DA3E25;
+  background-color: #dc2e13;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.209) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   color: hsl(0, 0%, 100%);
