refactoring copy-to-clip-board function, now works also on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ footer a {
     letter-spacing: 1rem;
   }
   .card {
-    padding: 30px 20px;
+    padding: 30px 20px 50px;
   }
 
   .password-logo img{
